--- a/CodexNaturalis/src/main/resources/fxml/MainMenuState.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/MainMenuState.fxml
@@ -1,83 +1,96 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.geometry.Point3D?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-
-<AnchorPane styleClass="scene-dimensions,scene-background" stylesheets="@../styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.gui.controller.MainMenuStateController">
-    <StackPane layoutX="527.0" layoutY="110.0" prefHeight="512.0" prefWidth="420.0" styleClass="scene-background" AnchorPane.leftAnchor="500.0" AnchorPane.rightAnchor="500.0">
+<AnchorPane styleClass="scene-dimensions,scene-background" stylesheets="@../styles.css"
+            xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="it.polimi.ingsw.gui.controller.MainMenuStateController">
+    <StackPane layoutX="527.0" layoutY="110.0" prefHeight="512.0" prefWidth="420.0" styleClass="scene-background"
+               AnchorPane.leftAnchor="500.0" AnchorPane.rightAnchor="500.0">
         <VBox alignment="CENTER" spacing="10">
             <ImageView fitHeight="235.0" fitWidth="251.0" pickOnBounds="true" smooth="false" translateY="50.0">
-                <Image url="@../Images/LogoCodexNaturalis.jpg" />
+                <Image url="@../Images/LogoCodexNaturalis.jpg"/>
                 <VBox.margin>
-                    <Insets /> <!-- Negative margin to move the image a bit higher than center -->
+                    <Insets/> <!-- Negative margin to move the image a bit higher than center -->
                 </VBox.margin>
             </ImageView>
             <Label fx:id="errorLabel" prefHeight="40.0" prefWidth="223.0" styleClass="normal-label" textFill="#f80300">
             </Label>
             <Label text="Before playing, choose a username">
-            <font>
-               <Font name="Book Antiqua Bold Italic" size="14.0" />
-            </font></Label>
-            <TextField fx:id="usernameField" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="220.0" promptText="Enter your username here" styleClass="little-label" />
+                <font>
+                    <Font name="Book Antiqua Bold Italic" size="14.0"/>
+                </font>
+            </Label>
+            <TextField fx:id="usernameField" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="25.0"
+                       prefWidth="220.0" promptText="Enter your username here" styleClass="little-label"/>
 
-            <Button fx:id="playButton" onAction="#handlePlayButton" prefHeight="40.0" prefWidth="220.0" styleClass="primary-button" text="Play" />
+            <Button fx:id="playButton" onAction="#handlePlayButton" prefHeight="40.0" prefWidth="220.0"
+                    styleClass="primary-button" text="Play"/>
         </VBox>
     </StackPane>
-   <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="432.0" layoutY="581.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="180.0" AnchorPane.leftAnchor="428.0">
-      <Image url="@../Images/CN_Decoration1.jpg" />
-   </ImageView>
-   <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="839.0" layoutY="574.0" pickOnBounds="true" preserveRatio="true" rotate="180.0" AnchorPane.bottomAnchor="180.0" AnchorPane.rightAnchor="428.0">
-      <rotationAxis>
-         <Point3D y="90.0" z="1.0" />
-      </rotationAxis>
-      <Image url="@../Images/CN_Decoration1.jpg" />
-   </ImageView>
-   <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="824.0" layoutY="139.0" pickOnBounds="true" preserveRatio="true" rotate="180.0" AnchorPane.rightAnchor="428.0" AnchorPane.topAnchor="154.0">
-      <Image url="@../Images/CN_Decoration1.jpg" />
-   </ImageView>
-   <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="428.0" layoutY="154.0" pickOnBounds="true" preserveRatio="true" rotate="180.0" AnchorPane.leftAnchor="428.0" AnchorPane.topAnchor="154.0">
-      <rotationAxis>
-         <Point3D x="90.0" z="1.0" />
-      </rotationAxis>
-      <Image url="@../Images/CN_Decoration1.jpg" />
-   </ImageView>
-   <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="30.0" layoutY="677.0" pickOnBounds="true" preserveRatio="true" rotate="180.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
-      <rotationAxis>
-         <Point3D y="90.0" z="1.0" />
-      </rotationAxis>
-      <Image url="@../Images/CN_decoration9.png" />
-   </ImageView>
-   <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="45.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true" rotate="180.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
-      <Image url="@../Images/CN_decoration9.png" />
-   </ImageView>
-   <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0">
-      <Image url="@../Images/CN_decoration9.png" />
-   </ImageView>
-   <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="10.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true" rotate="180.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-      <rotationAxis>
-         <Point3D x="90.0" z="1.0" />
-      </rotationAxis>
-      <Image url="@../Images/CN_decoration9.png" />
-   </ImageView>
-   <ImageView fitHeight="111.0" fitWidth="103.0" layoutX="659.0" layoutY="669.0" pickOnBounds="true" preserveRatio="true">
-      <Image url="@../Images/CN_Funghi_kingdom.png" />
-   </ImageView>
-   <ImageView fitHeight="102.0" fitWidth="103.0" layoutX="325.0" layoutY="347.0" pickOnBounds="true" preserveRatio="true">
-      <Image url="@../Images/CN_Animal_kingdom.png" />
-   </ImageView>
-   <ImageView fitHeight="102.0" fitWidth="103.0" layoutX="659.0" layoutY="60.0" pickOnBounds="true" preserveRatio="true">
-      <Image url="@../Images/CN_Plant_kingdom.png" />
-   </ImageView>
-   <ImageView fitHeight="100.0" fitWidth="103.0" layoutX="1002.0" layoutY="367.0" pickOnBounds="true" preserveRatio="true">
-      <Image url="@../Images/CN_Insect_kingdom.png" />
-   </ImageView>
+    <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="432.0" layoutY="581.0" pickOnBounds="true"
+               preserveRatio="true" AnchorPane.bottomAnchor="180.0" AnchorPane.leftAnchor="428.0">
+        <Image url="@../Images/CN_Decoration1.jpg"/>
+    </ImageView>
+    <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="839.0" layoutY="574.0" pickOnBounds="true"
+               preserveRatio="true" rotate="180.0" AnchorPane.bottomAnchor="180.0" AnchorPane.rightAnchor="428.0">
+        <rotationAxis>
+            <Point3D y="90.0" z="1.0"/>
+        </rotationAxis>
+        <Image url="@../Images/CN_Decoration1.jpg"/>
+    </ImageView>
+    <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="824.0" layoutY="139.0" pickOnBounds="true"
+               preserveRatio="true" rotate="180.0" AnchorPane.rightAnchor="428.0" AnchorPane.topAnchor="154.0">
+        <Image url="@../Images/CN_Decoration1.jpg"/>
+    </ImageView>
+    <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="428.0" layoutY="154.0" pickOnBounds="true"
+               preserveRatio="true" rotate="180.0" AnchorPane.leftAnchor="428.0" AnchorPane.topAnchor="154.0">
+        <rotationAxis>
+            <Point3D x="90.0" z="1.0"/>
+        </rotationAxis>
+        <Image url="@../Images/CN_Decoration1.jpg"/>
+    </ImageView>
+    <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="30.0" layoutY="677.0" pickOnBounds="true"
+               preserveRatio="true" rotate="180.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
+        <rotationAxis>
+            <Point3D y="90.0" z="1.0"/>
+        </rotationAxis>
+        <Image url="@../Images/CN_decoration9.png"/>
+    </ImageView>
+    <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="45.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true"
+               rotate="180.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <Image url="@../Images/CN_decoration9.png"/>
+    </ImageView>
+    <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0"
+               AnchorPane.rightAnchor="0.0">
+        <Image url="@../Images/CN_decoration9.png"/>
+    </ImageView>
+    <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="10.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true"
+               rotate="180.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <rotationAxis>
+            <Point3D x="90.0" z="1.0"/>
+        </rotationAxis>
+        <Image url="@../Images/CN_decoration9.png"/>
+    </ImageView>
+    <ImageView fitHeight="111.0" fitWidth="103.0" layoutX="659.0" layoutY="669.0" pickOnBounds="true"
+               preserveRatio="true">
+        <Image url="@../Images/CN_Funghi_kingdom.png"/>
+    </ImageView>
+    <ImageView fitHeight="102.0" fitWidth="103.0" layoutX="325.0" layoutY="347.0" pickOnBounds="true"
+               preserveRatio="true">
+        <Image url="@../Images/CN_Animal_kingdom.png"/>
+    </ImageView>
+    <ImageView fitHeight="102.0" fitWidth="103.0" layoutX="659.0" layoutY="60.0" pickOnBounds="true"
+               preserveRatio="true">
+        <Image url="@../Images/CN_Plant_kingdom.png"/>
+    </ImageView>
+    <ImageView fitHeight="100.0" fitWidth="103.0" layoutX="1002.0" layoutY="347.0" pickOnBounds="true"
+               preserveRatio="true">
+        <Image url="@../Images/CN_Insect_kingdom.png"/>
+    </ImageView>
 </AnchorPane>
