--- a/CodexNaturalis/src/main/resources/fxml/GetWinnerState.fxml
+++ b/CodexNaturalis/src/main/resources/fxml/GetWinnerState.fxml
@@ -2,33 +2,58 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="scene-dimensions,scene-background"
-            stylesheets="@../styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="it.polimi.ingsw.view.gui.controller.GetWinnerController">
-    <VBox alignment="CENTER" layoutX="82.0" layoutY="63.0" spacing="20.0" AnchorPane.bottomAnchor="100.0"
-          AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="100.0">
-        <HBox alignment="CENTER" prefHeight="482.0" prefWidth="431.0" spacing="50.0">
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+
+<AnchorPane styleClass="scene-dimensions,scene-background" stylesheets="@../styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.view.gui.controller.GetWinnerController">
+    <VBox alignment="CENTER" spacing="20.0" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="60.0">
+        <HBox alignment="CENTER" prefWidth="431.0" spacing="50.0">
             <AnchorPane fx:id="gameBoardAnchorPane">
-                <ImageView fitHeight="555.0" fitWidth="443.0" pickOnBounds="true" preserveRatio="true">
-                    <Image url="@../Images/Board.jpg"/>
+                <ImageView fitHeight="565.0" fitWidth="462.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <Image url="@../Images/Board.jpg" />
                 </ImageView>
             </AnchorPane>
-            <VBox alignment="CENTER" spacing="50.0">
+            <VBox fx:id="tokenColorBox" alignment="CENTER" spacing="20.0">
                 <ImageView fitHeight="293.0" fitWidth="301.0" pickOnBounds="true" smooth="false">
-                    <Image url="@../Images/LogoCodexNaturalis.jpg"/>
+                    <Image url="@../Images/LogoCodexNaturalis.jpg" />
                 </ImageView>
-                <Label alignment="CENTER" styleClass="title-label" text="THE WINNER IS"/>
-                <Label fx:id="usernameWinner" styleClass="title-label" text="PLAYER"/>
+                <VBox alignment="CENTER" spacing="5.0">
+                    <HBox fx:id="hBoxRed" alignment="CENTER" spacing="5.0">
+                        <ImageView fitHeight="40.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                            <Image url="@../Images/Board.jpg"/>
+                        </ImageView>
+                        <Label fx:id="playerRed" alignment="CENTER" styleClass="normal-label" text="Player1"/>
+                    </HBox>
+                    <HBox fx:id="hBoxGreen" alignment="CENTER" spacing="5.0">
+                        <ImageView fitHeight="40.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                            <Image url="@../Images/Board.jpg"/>
+                        </ImageView>
+                        <Label fx:id="playerGreen" alignment="CENTER" styleClass="normal-label" text="Player2"/>
+                    </HBox>
+                    <HBox fx:id="hBoxBlue" alignment="CENTER" spacing="5.0">
+                        <ImageView fitHeight="40.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                            <Image url="@../Images/Board.jpg"/>
+                        </ImageView>
+                        <Label fx:id="playerBlue" alignment="CENTER" styleClass="normal-label" text="Player3"/>
+                    </HBox>
+                    <HBox fx:id="hBoxYellow" alignment="CENTER" spacing="5.0">
+                        <ImageView fitHeight="40.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                            <Image url="@../Images/Board.jpg"/>
+                        </ImageView>
+                        <Label fx:id="playerYellow" alignment="CENTER" styleClass="normal-label" text="Player4"/>
+                    </HBox>
+                </VBox>
+                <Label alignment="CENTER" styleClass="title-label" text="THE WINNER IS" />
+                <Label fx:id="usernameWinner" styleClass="title-label" text="PLAYER" />
             </VBox>
         </HBox>
-        <Button fx:id="returnToLobbyButton" mnemonicParsing="false" onMouseClicked="#handleReturnToLobby"
-                style="-fx-background-color: #a2ecbb;" styleClass="primary-button" text="RETURN TO LOBBY"/>
+        <Button fx:id="returnToLobbyButton" mnemonicParsing="false" onMouseClicked="#handleReturnToLobby" style="-fx-background-color: #a2ecbb;" styleClass="primary-button" text="RETURN TO LOBBY" />
     </VBox>
     <!-- Top-left Corner -->
-    <ImageView rotate="180" scaleX="-1" styleClass="corner-image" AnchorPane.leftAnchor="0.0"
-               AnchorPane.topAnchor="0.0">
+    <ImageView rotate="180" scaleX="-1" styleClass="corner-image" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
     </ImageView>
 
     <!-- Top-Right Corner -->
